# Chat4Openapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  docker-compose.yml  environment.yml  run.bat  run.sh
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_foundation.py  0002_tool_runtime.py  0003_skills_chat.py  0004_api_source_refresh.py  0005_agent_runtime.py  0006_varcards_markdown_prompt.py  0007_agent_runtime_hardening.py  0008_multi_agent.py  0009_tool_sessions.py  0010_tool_oauth.py  0011_oauth_operation_claims.py  0012_conversation_owners.py  0013_agent_embeds.py  0014_agent4api_brand.py  0015_system_users.py  0016_browser_chat_tool_sessions.py  0017_api_source_auth_mode.py  0018_source_auth_request_config.py  0019_auto_agentify_jobs.py  0020_agent_description.py  0021_auto_agentify_source_jobs.py  0023_tool_schema_review.py  (+1 more)
backend/tests/: conftest.py  test_admin_auth.py  test_admin_embeds.py  test_admin_settings.py  test_admin_tools_bulk.py  test_admin_users.py  test_admin_write_concurrency.py  test_agent_api.py  test_agent_keys.py  test_agent_models.py  test_agent_runtime.py  test_agui_contracts.py  test_agui_events.py  test_agui_runtime.py  test_auto_agentify_api.py  test_auto_agentify_catalog.py  test_auto_agentify_jobs.py  test_auto_agentify_planner.py  test_auto_agentify_sse.py  test_brand_migration.py  test_chat_orchestrator.py  test_chat_turn_api.py  test_compatible_api.py  test_database.py  test_embed_agent_api.py  test_embed_auth_grants.py  test_embed_migration.py  test_embed_models.py  test_embed_oauth.py  test_embed_public.py  test_embed_sessions.py  test_embed_urls.py  test_final_migration_acceptance.py  test_health.py  test_llm_providers.py  test_mcp_runtime.py  test_multi_agent_models.py  test_openapi_import.py  test_setup.py  test_skill_models.py  (+12 more)
(+269 files in other folders)
