[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatapi"
version = "0.1.0"
description = "Chat with your APIs through MCP tools and skills"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "cryptography>=45,<50",
  "fastapi>=0.116,<1",
  "fastmcp==3.4.4",
  "httpx>=0.28,<1",
  "openapi-spec-validator>=0.8,<1",
  "pydantic-settings>=2.10,<3",
  "PyYAML>=6.0,<7",
  "pwdlib[argon2]>=0.2,<1",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "truststore>=0.10,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatapi"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
